--- a/app/src/main/res/layout/activity_pod1.xml
+++ b/app/src/main/res/layout/activity_pod1.xml
@@ -4,63 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="spero.shariq.com.myopmvp10.pod1">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="Postoperative review"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        <!--Q-->
-        <LinearLayout android:orientation="vertical" android:background="@color/orange" android:layout_width="match_parent" android:layout_height="wrap_content">
-            <TextView
-                android:text="Do you have any postop problems?"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    tools:context="spero.shariq.com.myopmvp10.pod1"
+    tools:layout_editor_absoluteY="25dp">
 
-            <RadioGroup android:paddingBottom="5dp" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:text="Postoperative review"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+        <!--Q-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/orange"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Do you have any postop problems?" />
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp">
 
                 <RadioButton
                     android:id="@+id/rb1"
-                    android:onClick="rb1click"
-                    android:text="YES"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginRight="180dp"
                     android:background="@color/colorPrimary"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"/>
+                    android:onClick="rb1click"
+                    android:text="YES" />
+
                 <RadioButton
                     android:id="@+id/rb2"
-                    android:onClick="rb2click"
-                    android:text="NO "
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"/>
+                    android:baselineAligned="false"
+                    android:onClick="rb2click"
+                    android:text="NO " />
             </RadioGroup>
         </LinearLayout>
         <!--Q-->
 
         <!--Done btn-->
         <LinearLayout
-            android:padding="5dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp">
+
             <Button
                 android:id="@+id/PreRedonebtn"
-                android:text="DONE"
-                android:textSize="30dp"
-
-                android:textColor="@color/white"
+                android:layout_width="304dp"
+                android:layout_height="wrap_content"
 
                 android:layout_margin="5sp"
+
                 android:onClick="clik"
-                android:layout_width="304dp"
-                android:layout_height="wrap_content"/>
+                android:text="DONE"
+                android:textColor="@color/white"
+                android:textSize="30dp" />
         </LinearLayout>
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
